--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,14 @@
-<ion-menu [content]="conteudo">
-    <ion-list>
-        <button ion-item menuClose *ngFor="let pagina of paginas">
-            <ion-icon [name]="pagina.icone" item-left></ion-icon>
-            {{pagina.titulo}}
-        </button>
-    </ion-list>
-</ion-menu>
-<ion-nav [root]="rootPage" #conteudo></ion-nav>
+<ion-split-pane>
+    <ion-menu [content]="conteudo">
+        <ion-content>
+            <ion-list>
+                <button ion-item menuClose *ngFor="let pagina of paginas"
+                    (click)="irParaPagina(pagina.pagina)">
+                    <ion-icon [name]="pagina.icone" item-left></ion-icon>
+                    {{pagina.titulo}}
+                </button>
+            </ion-list>            
+        </ion-content>
+    </ion-menu>
+    <ion-nav [root]="rootPage" main #conteudo swipeBackEnabled="false"></ion-nav>
+</ion-split-pane>
