--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,16 @@
 <ion-split-pane>
     <ion-menu [content]="conteudo">
         <ion-content>
-            <ion-list>
+            <ion-item id="cabecalho-menu" class="cabecalho-menu">
+                <div>
+                    <ion-avatar item-start>
+                        <img src="assets/img/ramon.png">
+                    </ion-avatar>
+                </div>
+                <h2>Ramón Souza</h2>
+                <p>contato@ramonsouza.com</p>
+            </ion-item>
+            <ion-list> 
                 <button ion-item menuClose *ngFor="let pagina of paginas"
                     (click)="irParaPagina(pagina.pagina)">
                     <ion-icon [name]="pagina.icone" item-left></ion-icon>
